<resources>

    <string name="app_name">Safood</string>

    <!--tab name-->
    <string name="title_home">Home</string>
    <string name="title_allergy_setting">Allergy Setting</string>
    <string name="title_activity_maps">Map</string>

    <!--button name-->
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_go">GO</string>
    <string name="btn_add_recipe">Add new Recipe</string>
    <string name="btn_add_cart">Add to shopping cart</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_set_allergy">Set Allergens</string>
    <string name="btn_forget">Forgot password?</string>

    <!--default market name-->
    <string name="btn_Costco">Costco</string>
    <string name="btn_Kroger">Kroger</string>
    <string name="btn_Target">Target</string>
    <string name="btn_WalMart">WalMart</string>

    <!--image button content-->
    <string name="img_btn_gen_sl">Generate a \nshopping list</string>
    <string name="img_btn_view_sl">View shopping list</string>
    <string name="img_btn_find_st">Find a store</string>
    <string name="img_btn_search">Search recipe</string>
    <string name="img_btn_cb">Cookbook</string>
    <string name="img_btn_addR">Add a new recipe</string>

    <!--text-->
    <string name="usr_text">Username</string>
    <string name="pwd_text">Password</string>
    <string name="pwd_confirm_text">Confirm Password</string>
    <string name="userName">Welcome!</string>
    <string name="allergyInfo">Select your allergen here.\nNote: You can always change it in your account setting. :)
    </string>
    <string name="text_reset_pwd">Enter your registered email address below,and follow the instruction in the email.</string>
    <string name="text_search_hint_recipe">Type what you want</string>
    <string name="text_hint_add_recipe">Enter new recipe name</string>
    <string name="gps_not_found_title">GPS not found</string>
    <string name="gps_not_found_message">Want to enable?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>

