<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/TF_location"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="70dp"
        android:ems="10"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="60dp"
        android:inputType="textPersonName" />

    <ImageButton
        android:id="@+id/btn_search_map"
        android:layout_marginTop="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/search_icon"
        android:layout_alignEnd="@+id/TF_location"
        android:layout_alignRight="@+id/TF_location"
        android:onClick="onClick" />


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_walmart"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        tools:context="com.example.priyanka.mapsdemo.MapsActivity" />

    <Button
        android:id="@+id/btn_walmart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TF_location"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:onClick="onClick"
        android:text="@string/btn_WalMart" />

    <Button
        android:id="@+id/btn_Target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TF_location"
        android:layout_toEndOf="@+id/btn_walmart"
        android:layout_toRightOf="@+id/btn_walmart"
        android:onClick="onClick"
        android:text="@string/btn_Target" />

    <Button
        android:id="@+id/btn_Kroger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TF_location"
        android:layout_toEndOf="@+id/btn_Target"
        android:layout_toRightOf="@+id/btn_Target"
        android:onClick="onClick"
        android:text="@string/btn_Kroger" />

    <Button
        android:id="@+id/btn_costco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_Kroger"
        android:layout_toEndOf="@+id/btn_Kroger"
        android:layout_toRightOf="@+id/btn_Kroger"
        android:onClick="onClick"
        android:text="@string/btn_Costco" />


</RelativeLayout>