<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignInActivity">


    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal"
                    android:paddingTop="40dp"
                    android:paddingBottom="40dp">

                <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:src="@drawable/logo" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:paddingBottom="50dp">

            <EditText
                    android:id="@+id/etLoginUsername"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorWhite"
                    android:ems="10"
                    android:hint="@string/usr_text"
                    android:inputType=""
                    android:textColor="@color/colorWhite"/>

            <EditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorWhite"
                    android:ems="10"
                    android:hint="@string/pwd_text"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <Button
                android:id="@+id/signIn_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_border"
                android:text="@string/btn_go"
                android:textColor="@color/colorWhite"/>
        <Button
                android:id="@+id/reset_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/btn_forget"
                android:background="@drawable/button_no_border"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
